Increase bottom margin for planimetria to avoid overlapping text

--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ a:hover {
 /* PLANIMETRIA */
 .planimetria-container {
   text-align: center;
-  margin: 4rem 0;
+  margin: 4rem 0 6rem 0;
 }
 
 .planimetria-image {
